[gd_scene load_steps=6 format=2]

[ext_resource path="res://Attacks/DramaAttacks/DramaAttack5/drama_attack5.gd" type="Script" id=1]
[ext_resource path="res://player/heart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Attacks/DramaAttacks/DramaAttack5/graphic.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 280, 100, 0, 0, 0, 0, 535, 100 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 300, 85, 0, 0, 0, 0, 505, 85, 0, 0, 0, 0, 585, 85 )
}

[node name="DramaAttack5" type="Node2D"]
script = ExtResource( 1 )

[node name="BorderField" type="ColorRect" parent="."]
margin_left = 300.0
margin_top = 150.0
margin_right = 560.0
margin_bottom = 415.0

[node name="TextureRect" type="TextureRect" parent="BorderField"]
margin_top = 5.0
margin_right = 256.0
margin_bottom = 261.0
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 520, 300 )

[node name="Heart" parent="." instance=ExtResource( 2 )]
position = Vector2( 550, 270 )

[node name="GraphicAttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UpperPointSpawn" type="Path2D" parent="."]
position = Vector2( -10, 50 )
curve = SubResource( 1 )

[node name="UpperPointLocation" type="PathFollow2D" parent="UpperPointSpawn"]
position = Vector2( 280, 100 )

[node name="LowerPointSpawn" type="Path2D" parent="."]
position = Vector2( 0, 330 )
curve = SubResource( 3 )

[node name="LowerPointLocation" type="PathFollow2D" parent="LowerPointSpawn"]
position = Vector2( 300, 85 )

[connection signal="timeout" from="GraphicAttackTimer" to="." method="_on_GraphicAttackTimer_timeout"]
